# zinc-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  fix_builder.sh  fix_unwrap.sh  plan.md  run_perf.sh
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
examples/: check_esplora.rs  psbt_sign_audit.rs  scan_derivation_evidence.rs  sync_and_balance.rs  wallet_setup.rs
src/: builder.rs  builder.rs.orig  crypto.rs  error.rs  history.rs  lib.rs  lib.rs.orig  listing.rs  listing_nostr.rs  listing_relay.rs  logging.rs  offer.rs  offer_accept.rs  offer_create.rs  offer_nostr.rs  offer_relay.rs  sign_intent.rs
src/keys/: derivation.rs  mnemonic.rs  mod.rs
src/ordinals/: client.rs  error.rs  mod.rs  shield.rs  shield.rs.orig  types.rs
src/tests/: balance.rs  builder_depth.rs  builder_planning.rs  discovery_scan.rs  dual_send_signing.rs  external_signing.rs  history.rs  listing.rs  listing_nostr.rs  listing_relay.rs  mod.rs  offer.rs  offer_accept.rs  offer_create.rs  offer_nostr.rs  offer_relay.rs  ordinal_shield.rs  persistence_scope.rs  profiles.rs  sign_intent.rs  signing.rs  utxo_list.rs  wasm_wallet_state.rs  watch_and_xpub.rs
tests/: integration_esplora.rs  multi_account_test.rs  ordinals_balance.rs  ordinals_client.rs  ordinals_shield.rs  ordinals_types.rs  persistence.rs  send_flow.rs  sync_events.rs  wallet_builder.rs  wallet_flow.rs  wasm_account_test.rs  wasm_contract_test.rs  wasm_test.rs
